# Studies

Algorithms/Collections/: test_start.kt
Algorithms/Collections/Collects/: DynamicArrayList.java  LinkedList.java  SimpleMap.java
Algorithms/Collections/Search/: BinarySearch.java  ExponentialSearch.java  InterpolateSearch.java  JumpSearch.java  KMPSearch.java  LinearSearch.java  Search.java
Algorithms/Collections/Sort/: BubbleSort.java  InsertionsSort.java  QuickSort.java  SelectionSort.java
Algorithms/Math/Diofant/: CMakeLists.txt  diofantine.c
Algorithms/Math/Euclid/: euclid_extended_matrix.c  help_lalgebra.c  l_algebra.h
Algorithms/Math/matrix/: CMakeLists.txt  calc_complements.c  create_matrix.c  determinant.c  equals_matrix.c  fill_matrix.c  inverse_matrix.c  matrix_setValue.c  mult_matrix.c  print_matrix.c  remove_matrix.c  scale_matrix.c  sub_matrix.c  sum_matrix.c  transpose_matrix.c
Dreams/EvolutionalModel/NaturalSelectionUnity/: Assembly-CSharp.csproj
Dreams/NeuraSystem/: Вкус.vsdx  Зрение.vsdx  Обоняние.vsdx  Слух.vsdx  Субъект.xmind
Edu/C#/Patterns/: AbstractFactory.cs  Adapter.cs  Bridge.cs  ChainOfResponsibility.cs  Command.cs  ComplexCommand.cs  Composite.cs  Decorator.cs  FabricMethod.cs  Facade.cs  FactoryMethodModified.cs  Iterator.cs  Observer.cs  Patterns.sln  (+7 more)
Edu/Java/: Вопросы собеседования.xmind  Вопросы собеседования_2.xmind  Вопросы собеседования_3.xmind
Edu/Math/: Карта математики.xmind
Modeling/UML/: ER.vsdx  Sequences.vsdx  UseCase.vsdx  Анализ DD.vsdx  Пример контекстной диаграммы.vsdx
Projects/DataBases/: Язык SQL.xmind
(+203 files in other folders)
